<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_global">
        <ListPreference
            android:key="orientation"
            android:title="@string/orientation"
            android:entries="@array/orientations"
            android:entryValues="@array/orientation_values"
            android:defaultValue="default"
            />
        <Preference
            android:key="about"
            android:title="@string/about"
            android:summary="@string/about_summary"
            android:persistent="false"
            />
        <CheckBoxPreference
            android:key="has_platinum"
            android:title="@string/platinum"
            android:summary="@string/platinum_summary"
            android:defaultValue="true"
            />
    </PreferenceCategory>
	<PreferenceCategory android:title="@string/prefs_thread_display">
		<com.ferg.awfulapp.preferences.NumericEditTextPreference
			android:key="post_per_page"
			android:title="@string/setting_posts_per_page"
            android:summary="@string/setting_posts_per_page_summary"
			android:defaultValue="40"
			/>
		<Preference 
			android:key="default_post_font_size" 
			android:title="@string/default_post_font_size"
			android:defaultValue="22"
			/>
		<Preference 
			android:key="colors" 
			android:title="@string/colors"
			/>
        <Preference
            android:key="threadinfo"
            android:title="@string/threadinfo"
            />
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_salr">
		<Preference 
			android:key="image_settings" 
			android:title="@string/image_settings"
			/>
        <EditTextPreference
            android:key="username"
            android:title="@string/username_pref"
            android:defaultValue="Username"
            />
		<CheckBoxPreference 
            android:key="user_quotes" 
			android:title="@string/user_quote"
            android:summary="@string/user_quote_summary"
			android:defaultValue="true"
			/>
		<CheckBoxPreference 
            android:key="user_highlight" 
			android:title="@string/user_highlight"
            android:summary="@string/user_highlight_summary"
			android:defaultValue="true"
			/>
		<CheckBoxPreference 
            android:key="new_threads_first" 
			android:title="@string/new_threads_first"
			android:defaultValue="false"
			/>
		<CheckBoxPreference 
            android:key="upper_next_arrow" 
			android:title="@string/show_next_page_button_at_top"
			android:defaultValue="false"
			/>
			<!-- TODO: Move these to a submenu or something, it's getting crowded. -->
		<CheckBoxPreference 
            android:key="wrap_thread_titles" 
			android:title="@string/wrap_titles"
			android:summary="@string/wrap_titles_summary"
			android:defaultValue="true"
			/>
		<CheckBoxPreference 
            android:key="show_all_spoilers" 
			android:title="@string/show_spoilers"
			android:summary="@string/show_spoilers_summary"
			android:defaultValue="false"
			/>
		<CheckBoxPreference 
            android:key="inline_youtube" 
			android:title="@string/inline_youtube"
			android:summary="@string/inline_youtube_summary"
			android:defaultValue="false"
			/>
		<CheckBoxPreference 
            android:key="debug_mode" 
			android:title="@string/debug_mode"
			android:summary="@string/debug_mode_summary"
			android:defaultValue="false"
			/>
    </PreferenceCategory>
</PreferenceScreen>
