<?xml version="1.0" encoding="utf-8"?>
<menu 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<item android:id="@+id/user_cp" app:showAsAction="ifRoom" android:title="@string/usercp" android:icon="@drawable/ic_interface_bookmarks"></item>
	<item
		android:id="@+id/go_to"
		android:icon="@drawable/ic_menu_gotopage"
		android:title="@string/go_to"
		/>
	<item
		android:id="@+id/refresh"
		android:icon="@drawable/ic_menu_load"
		android:title="@string/refresh" />
    <item 
        android:id="@+id/pm" 
        android:icon="@drawable/ic_menu_mail"
        android:title="@string/private_message"
        />
	<item
		android:id="@+id/settings"
		android:icon="@drawable/ic_menu_settings"
		android:title="@string/settings" />
	<item
		android:title="@string/logout"
        android:id="@+id/logout"
        android:icon="@drawable/ic_menu_logout"/>
	
</menu>
