<?xml version="1.0" encoding="utf-8"?>
<menu 
	xmlns:android="http://schemas.android.com/apk/res/android"
	>
	<item
		android:id="@+id/reply"
		android:icon="@drawable/new_post"
        android:showAsAction="ifRoom"
		/>
	<item
		android:id="@+id/next_page"
		android:icon="@drawable/r_arrow"
        android:showAsAction="ifRoom"
		/>
	<item
		android:id="@+id/usercp"
		android:icon="@drawable/gear"
		android:title="@string/user_cp"
        android:showAsAction="ifRoom"
		/>
	<item
		android:id="@+id/go_to"
		android:icon="@drawable/ic_menu_goto"
		android:title="@string/go_to"
        android:showAsAction="ifRoom"
		/>
	<item
		android:id="@+id/refresh"
		android:icon="@drawable/ic_menu_refresh"
		android:title="@string/refresh" 
		/>
	<item
        android:id="@+id/bookmark"
        android:title="@string/bookmark"
        android:icon="@drawable/ic_menu_star"
        />
	<item
        android:id="@+id/rate_thread"
        android:title="@string/rate_thread"
        android:icon="@drawable/ic_menu_rate_thread"
        />
	
	<item
		android:id="@+id/settings"
		android:icon="@drawable/ic_menu_preferences"
		android:title="@string/settings"
        />
	<item
		android:id="@+id/copy_url"
		android:icon="@drawable/ic_menu_copy"
		android:title="@string/copy_url"
        />
</menu>
